--- a/ibm/mas_devops/roles/cp4d_install/templates/cpd40/subscription-cpd-operator.yaml
+++ b/ibm/mas_devops/roles/cp4d_install/templates/cpd40/subscription-cpd-operator.yaml
@@ -4,25 +4,11 @@ kind: Subscription
 metadata:
   name: cpd-operator
   namespace: "{{ cpd_meta_namespace }}"
+  labels:
+    operators.coreos.com/cpd-platform-operator.ibm-common-services: ''
 spec:
   channel: v2.0
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: cpd-platform-operator
   source: ibm-operator-catalog
   sourceNamespace: openshift-marketplace
----
-apiVersion: operators.coreos.com/v1alpha1
-kind: Subscription
-metadata:
-  name: ibm-namespace-scope-operator
-  namespace: "{{ cpd_meta_namespace }}"
-spec:
-  channel: v3
-  installPlanApproval: Automatic
-  name: ibm-namespace-scope-operator
-  source: ibm-operator-catalog
-  sourceNamespace: openshift-marketplace
-  csvInjector:
-    enable: true
-  namespaceMembers:
-    - "{{ cpd_meta_namespace }}"
