--- a/ibm/mas_devops/roles/cp4d_install_services/tasks/cpd40/cp4d-services.yml
+++ b/ibm/mas_devops/roles/cp4d_install_services/tasks/cpd40/cp4d-services.yml
@@ -4,7 +4,7 @@
   debug:
     msg: "{{item}}"
 
-- name: "Verify if ibm operator is already installed"
+- name: "Verify if {{item}} operator is already installed"
   community.kubernetes.k8s_info:
     api_version: operators.coreos.com/v1alpha1
     kind: Subscription
@@ -13,7 +13,7 @@
       - "operators.coreos.com/{{item}}"
   register: _item_subscription
 
-- name: Lookup and Approve IBM Common Services operators
+- name: "Lookup and Approve {{item}} operators"
   block:
     - name: "Lookup and wait for Operator subscription to exist"
       community.kubernetes.k8s_info:
@@ -25,7 +25,7 @@
       register: _item_subscription_result
       retries: 20
       delay: 60 # Retry for approx 20 minutes (60s * 20 attempts) before giving up
-      until: _item_subscription_result.resources | length > 0
+      until: _item_subscription_result.resources is defined and _item_subscription_result.resources | length > 0
 
     - name: Lookup Operator install plan
       community.kubernetes.k8s_info:
@@ -59,5 +59,21 @@
             namespace: "{{ cpd_meta_namespace }}"
           spec:
             approved: true
+
+      - name: "Wait for {{item}} install to complete"
+        community.kubernetes.k8s_info:
+          api_version: operators.coreos.com/v1alpha1
+          kind: InstallPlan
+          namespace: "{{ cpd_meta_namespace }}"
+          label_selectors:
+            - "operators.coreos.com/{{item}}"
+        register: item_install_plan
+        retries: 20
+        delay: 60 # Retry for approx 20 minutes (60s * 20 attempts) before giving up
+        until: item_install_plan.resources[0].status.phase == "Complete" 
+        when:
+          - _item_subscription_result.resources | length > 0
+          - _item_subscription_result.resources[0].status is defined
+          - _item_subscription_result.resources[0].status.state != "Complete"       
   when:
     - (_item_subscription.resources | length == 0 or _item_subscription.resources[0].status.state == 'UpgradePending')
