--- a/ibm/mas_devops/roles/cp4d_install_services/tasks/cpd40/cp4d-services.yml
+++ b/ibm/mas_devops/roles/cp4d_install_services/tasks/cpd40/cp4d-services.yml
@@ -76,4 +76,4 @@
           - _item_subscription_result.resources[0].status is defined
           - _item_subscription_result.resources[0].status.state != "Complete"       
   when:
-    - ( _item_subscription.resources | length == 0 or (_item_subscription.resources[0].status is defined and _item_subscription.resources[0].status.state == 'UpgradePending'))
+    - ( _item_subscription.resources | length == 0 or (_item_subscription.resources[0].status.state is defined and _item_subscription.resources[0].status.state == 'UpgradePending'))
