--- a/ibm/mas_devops/roles/cp4d_install/defaults/main.yml
+++ b/ibm/mas_devops/roles/cp4d_install/defaults/main.yml
@@ -29,5 +29,5 @@ cpd_services_namespace: "{{ lookup('env', 'CPD_SERVICES_NAMESPACE') | default('c
 cpd_meta_namespace: "{{ lookup('env', 'CPD_NAMESPACE') | default('ibm-common-services', true) }}"
 
 ibm_common_services_subscription_labels:
-  - ibm-namespace-scope-operator.ibm-common-services
+  - "ibm-namespace-scope-operator.{{ cpd_meta_namespace }}"
   
