--- a/ibm/mas_devops/roles/cp4d_install_services/vars/cpd40.yml
+++ b/ibm/mas_devops/roles/cp4d_install_services/vars/cpd40.yml
@@ -1,5 +1,5 @@
 ---
-cpd_meta_namespace: 'ibm-common-services'
+#cpd_meta_namespace: 'ibm-common-services'
 
 db2wh:
   apiVersion: databases.cpd.ibm.com/v1
