--- a/ibm/mas_devops/roles/cp4d_install/tasks/install/ibm-common-services.yml
+++ b/ibm/mas_devops/roles/cp4d_install/tasks/install/ibm-common-services.yml
@@ -13,6 +13,18 @@
       - "operators.coreos.com/{{item}}"
   register: _item_subscription
 
+- name: "Lookup and wait for Operator subscription to exist"
+  community.kubernetes.k8s_info:
+    api_version: operators.coreos.com/v1alpha1
+    kind: Subscription
+    namespace: "{{ cpd_meta_namespace }}"
+    label_selectors:
+      - "operators.coreos.com/{{item}}"
+  register: _item_subscription_result
+  retries: 20
+  delay: 60 # Retry for approx 20 minutes (60s * 20 attempts) before giving up
+  until: _item_subscription_result.resources is defined and _item_subscription_result.resources | length > 0
+
 - name: Lookup and Approve IBM Common Services operators
   block:
     - name: "Lookup and wait for Operator subscription to exist"
